--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,127 @@
-.imageBook {
-    width: 176px;
-    height: 176px;
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f8f9fa;
+}
+
+.logoImage {
+    width: 40px;
+    height: 40px;
+}
+
+.search-bar {
+    width: 40%;
+}
+
+header {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.nav-link {
+    font-size: 1.1em;
+    padding: 0 15px;
+}
+
+.nav-link .fas {
+    margin-right: 5px;
+}
+
+.nav .register-btn {
+    border: 1px solid #151515;
+    color: #151515;
+}
+
+.nav .register-btn:hover {
+    border: 1px solid #151515;
+    background-color: #ece5e5;
+    color: #151515 !important;
+}
+
+.nav a:hover {
+    color: #b8b8ba !important;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.carousel-container {
+    position: relative;
+    width: 80%;
+    margin: 50px auto;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.carousel-slide-wrapper {
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-slide {
+    display: flex;
+    transition: transform 0.4s ease-in-out;
+}
+
+.book {
+    width: 25%; /* 4 books per view */
+    padding: 20px;
+    text-align: center;
+}
+
+.book img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+
+.carousel-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 24px;
+    z-index: 1;
+}
+
+.carousel-control.prev {
+    left: 0;
+}
+
+.carousel-control.next {
+    right: 0;
+}
+
+.carousel-dots {
+    text-align: center;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.dot.active {
+    background-color: #717171;
+}
+
+.book:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
 }
