--- a/templates/index.html
+++ b/templates/index.html
@@ -3,26 +3,81 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Readiverse</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   </head>
   <body>
     <div class="container">
-      <form action='/' method='POST'>
-        <input type='Text' id='bookInput' name='bookInput' placeholder="Enter the name of a book">
-        <button type='Submit' class='btn btn-primary'>Submit</button>
-      </form>
-      <div>{{ title }}</div>
-      <div>{{ author }}</div>
-      <div>{{ categories }}</div>
-      {% if bookImage %}
-        <img src='{{ bookImage }}'>
-      {% else %}
-        <img class='imageBook'  src='{{ url_for('static', filename='assets/default_image.png') }}'>
-      {% endif %}
+      <header class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4 border-bottom">
+        <a href="#" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none">
+          <img class="logoImage me-2" src="{{ url_for('static', filename='assets/logo.png') }}" alt="Logo" width="40" height="32">
+          <span class="fs-4">Readiverse</span>
+        </a>
+
+        <div class="search-bar d-flex align-items-center">
+          <input type="search" name="search" class="form-control me-2" placeholder="Search for books..." id="search-box" autocomplete="off">
+          <button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
+        </div>
+
+        <ul class="nav">
+          <li class="nav-item">
+            <a href="/profile" class="nav-link text-dark">
+              <i class="fas fa-user"></i> Profile
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/wishlist" class="nav-link text-dark">
+              <i class="fas fa-heart"></i> Wishlist
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/cart" class="nav-link text-dark">
+              <i class="fas fa-shopping-cart"></i> Cart
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/register" class="register-btn nav-link btn btn-outline-custom">Create Account</a>
+          </li>
+        </ul>
+      </header>
+
+      <div class="content">
+        
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=Primeiro Slide" alt="Primeiro Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Segundo Slide" alt="Segundo Slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Terceiro Slide" alt="Terceiro Slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Próximo</span>
+          </a>
+        </div>
+
+
+        
+      </div>
     </div>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
-</html> 
+</html>
