--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,85 +43,100 @@ header {
     color: #b8b8ba !important;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-.carousel-container {
-    position: relative;
-    width: 80%;
-    margin: 50px auto;
-    overflow: hidden;
-    border-radius: 10px;
-}
+/*Carousel Style*/
 
-.carousel-slide-wrapper {
-    width: 100%;
-    overflow: hidden;
-}
-
-.carousel-slide {
-    display: flex;
-    transition: transform 0.4s ease-in-out;
-}
-
-.book {
-    width: 25%; /* 4 books per view */
+main {
+    margin-top: 80px;
+    text-align: center;
     padding: 20px;
-    text-align: center;
 }
 
-.book img {
+.swiper {
+    height: 500px;
     width: 100%;
-    height: auto;
-    border-radius: 10px;
-    margin-bottom: 10px;
 }
 
-.carousel-control {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: none;
-    padding: 10px;
+.swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product-container {
+    background-color: #fff; 
+    border: 1px solid #ddd; 
+    border-radius: 10px; 
+    padding: 15px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    text-align: center; 
+    transition: transform 0.3s; 
     cursor: pointer;
-    font-size: 24px;
-    z-index: 1;
 }
 
-.carousel-control.prev {
-    left: 0;
+.product-container:hover {
+    transform: scale(1.05); 
 }
 
-.carousel-control.next {
-    right: 0;
+.product-container img {
+    max-width: 100%; 
+    height: 200px;
 }
 
-.carousel-dots {
-    text-align: center;
-    padding: 10px;
-    margin-top: 10px;
+.product-name {
+    font-size: 1.2em; 
+    color: #333; 
+    margin: 10px 0 0; 
 }
 
-.dot {
-    height: 15px;
-    width: 15px;
-    margin: 0 5px;
-    background-color: #bbb;
+.product-price {
+    font-size: 1em; 
+    color: #666; 
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    color: #333;
+    transform: translateY(-20px); 
+    margin: 0; 
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    width: 55px !important;
+    height: 55px !important;
+    border: 1px solid #333;
+    background-color: rgba(237, 232, 232, 0.8);
     border-radius: 50%;
-    display: inline-block;
-    cursor: pointer;
 }
 
-.dot.active {
-    background-color: #717171;
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    border: 1px solid #333;
+    background-color: rgb(220, 219, 219);
+    border-radius: 50%;
 }
 
-.book:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease-in-out;
+.swiper-pagination {
+    bottom: 130px !important; 
 }
+
+.swiper-pagination-bullet {
+    width: 11px !important; 
+    height: 11px !important; 
+    background: #333; 
+    opacity: 0.5; 
+    transition: opacity 0.3s, background-color 0.3s; 
+}
+
+.swiper-pagination-bullet-active {
+    opacity: 1; 
+    background: #ff4081; 
+}
+
+@media (max-width: 450px) {
+    .swiper {
+        height: 270px;
+    }
+}
+
