--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,76 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Readiverse</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+</head>
+<body>
     <div class="container">
-      <header class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4 border-bottom">
-        <a href="#" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none">
-          <img class="logoImage me-2" src="{{ url_for('static', filename='assets/logo.png') }}" alt="Logo" width="40" height="32">
-          <span class="fs-4">Readiverse</span>
-        </a>
-
-        <div class="search-bar d-flex align-items-center">
-          <input type="search" name="search" class="form-control me-2" placeholder="Search for books..." id="search-box" autocomplete="off">
-          <button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
-        </div>
-
-        <ul class="nav">
-          <li class="nav-item">
-            <a href="/profile" class="nav-link text-dark">
-              <i class="fas fa-user"></i> Profile
+        <header class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-4 border-bottom">
+            <a href="#" class="d-flex align-items-center mb-3 mb-md-0 text-dark text-decoration-none">
+                <img class="default_coverImage me-2" src="{{ url_for('static', filename='assets/default_cover.png') }}" alt="default_cover" width="40" height="40">
+                <span class="fs-4">Readiverse</span>
             </a>
-          </li>
-          <li class="nav-item">
-            <a href="/wishlist" class="nav-link text-dark">
-              <i class="fas fa-heart"></i> Wishlist
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/cart" class="nav-link text-dark">
-              <i class="fas fa-shopping-cart"></i> Cart
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="/register" class="register-btn nav-link btn btn-outline-custom">Create Account</a>
-          </li>
-        </ul>
-      </header>
 
-      <div class="content">
-        
+            <div class="search-bar d-flex align-items-center">
+                <form action="/" method="POST" class="d-flex">
+                    <div class="input-group">
+                      <input type="search" name="search" class="form-control" placeholder="Search for books..." id="search" autocomplete="off">
+                      <button class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
+                    </div>
+                  </form>                  
+            </div>
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=Primeiro Slide" alt="Primeiro Slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Segundo Slide" alt="Segundo Slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Terceiro Slide" alt="Terceiro Slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Próximo</span>
-          </a>
-        </div>
-
+            <ul class="nav">
+                <li class="nav-item">
+                    <a href="/profile" class="nav-link text-dark">
+                        <i class="fas fa-user"></i> Profile
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/wishlist" class="nav-link text-dark">
+                        <i class="fas fa-heart"></i> Wishlist
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/cart" class="nav-link text-dark">
+                        <i class="fas fa-shopping-cart"></i> Cart
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/register" class="register-btn nav-link btn btn-outline-custom">Create Account</a>
+                </li>
+            </ul>
+        </header>
 
         
-      </div>
+        <main>
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                  {% for book in carousel_books %}
+                  <div class="swiper-slide">
+                      <div class="product-container">
+                          <img src="{{ book.image }}" alt="Foto {{ loop.index }}">
+                          <div class="product-name">{{ book.name }}</div>
+                          <div class="product-price">{{ book.price }}</div>
+                      </div>
+                  </div>
+              {% endfor %}
+      
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </main>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/carousel.js') }}"></script>
+</body>
 </html>
